# pii_desensitizer

./: .env  .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/plans/: 2026-07-15-pii-desensitizer.md  2026-07-16-traditional-chinese-ner.md  2026-07-17-macau-id-ner-fix.md  2026-07-17-word-boundary-fix.md  2026-07-20-portuguese-name-address-support.md  2026-07-21-stateless-mode.md  2026-07-22-ignorecase-fix.md  2026-07-22-low-risk-false-positive-fixes.md
src/pii_desensitizer/: __init__.py  config.py
src/pii_desensitizer/api/: app.py  auth.py  models.py  routes.py
src/pii_desensitizer/engine/: desensitize.py  placeholder.py  restore.py
src/pii_desensitizer/recognizers/: __init__.py  address.py  contact.py  financial.py  identity.py  person_ner.py  temporal.py
src/pii_desensitizer/store/: redis_store.py
tests/: conftest.py  test_integration.py
tests/api/: test_routes.py
tests/engine/: test_desensitize.py  test_placeholder.py  test_restore.py
tests/recognizers/: test_address.py  test_contact.py  test_financial.py  test_identity.py  test_person_ner.py  test_temporal.py
tests/store/: test_redis_store.py
