[project]
name = "pii-desensitizer"
version = "0.1.0"
description = "Reversible PII desensitization proxy for cloud LLM API protection (HK/Macau, Chinese+English)"
readme = "README.md"
authors = [
    { name = "Jack Cheang", email = "uhcheang@safp.gov.mo" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pii-desensitizer = "pii_desensitizer:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
