[project]
name = "pii-desensitizer"
version = "0.1.0"
description = "Reversible PII desensitization proxy for cloud LLM API protection (HK/Macau, Chinese+English)"
readme = "README.md"
authors = [
    { name = "Jack Cheang", email = "uhcheang@safp.gov.mo" }
]
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.139.0",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "spacy>=3.8.13",
    "uvicorn[standard]>=0.51.0",
    "zh-core-web-sm",
]

[project.scripts]
pii-desensitizer = "pii_desensitizer:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
zh-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.8.0/zh_core_web_sm-3.8.0-py3-none-any.whl" }
